--- a/public/projects.json
+++ b/public/projects.json
@@ -26,8 +26,8 @@
     "image": "./images/frontend-KRB.png"
   },
   {
-    "name": "FdF",
-    "description": "3D wireframe rendering project using C.",
+    "name": "coming soon",
+    "description": "coming soon",
     "html_url": "https://github.com/GunturWS/FdF",
     "stargazers_count": 3,
     "forks_count": 0,
@@ -39,11 +39,11 @@
     "image": "./images/porto.jpg"
   },
   {
-    "name": "cub3D",
-    "description": "3D game engine project with raycasting.",
-    "html_url": "https://github.com/GunturWS/cub3D",
-    "stargazers_count": 8,
-    "forks_count": 1,
+    "name": "coming soon",
+    "description": "coming soon",
+    "html_url": "https://github.com/GunturWS/FdF",
+    "stargazers_count": 3,
+    "forks_count": 0,
     "archived": false,
     "owner": {
       "login": "GunturWS",
