--- a/public/projects.json
+++ b/public/projects.json
@@ -1,8 +1,8 @@
 [
   {
     "name": "GunturWS.github.io",
-    "description": "Personal portfolio website built with Vite, Vue, and TailwindCSS.",
-    "html_url": "https://github.com/GunturWS/lareii.github.io",
+    "description": "Personal portfolio website built with Vite, Vue, and TailwindCSS. portfolio ini sudah responsive dan dapat diakses di berbagai perangkat.",
+    "html_url": "https://guntur-github-io.vercel.app/",
     "stargazers_count": 999,
     "forks_count": 2,
     "archived": false,
@@ -10,7 +10,7 @@
       "login": "GunturWS",
       "avatar_Github": "https://avatars.githubusercontent.com/u/0000000?v=4"
     },
-    "image": "./images/porto.jpg"
+    "image": "./images/image1.png"
   },
   {
     "name": "Kebun Raya Balikpapan. TA",
@@ -23,20 +23,20 @@
       "login": "GunturWS",
       "avatar_Github": "https://avatars.githubusercontent.com/u/0000000?v=4"
     },
-    "image": "./images/frontend-KRB.png"
+    "image": "./images/image2.png"
   },
   {
-    "name": "coming soon",
-    "description": "coming soon",
-    "html_url": "https://github.com/GunturWS/FdF",
+    "name": "TaStore",
+    "description": "TaStrore merupakan aplikasi e-commerce yang dibagung dengan menggunakan flutter, dart, dan firebase. dimaan aplikasi ini berbasis pada mobile.",
+    "html_url": "https://github.com/GunturWS/Flutter-e-commerce-TaStore",
     "stargazers_count": 3,
     "forks_count": 0,
     "archived": false,
     "owner": {
       "login": "GunturWS",
       "avatar_Github": "https://avatars.githubusercontent.com/u/0000000?v=4"
-    },
-    "image": "./images/porto.jpg"
+    },  
+    "image": "./images/image3.png"
   },
   {
     "name": "coming soon",
