--- a/public/projects.json
+++ b/public/projects.json
@@ -27,9 +27,9 @@
   },
   {
     "name": "TaStore",
-    "description": "TaStrore merupakan aplikasi e-commerce ...",
+    "description": "TaStrore merupakan aplikasi e-commerce dimana pengguna dapat melakukan pembelian laptop secaran online. atau melakukan booking secara online",
     "html_url": "https://github.com/GunturWS/Flutter-e-commerce-TaStore",
-    "stargazers_count": 3,
+    "stargazers_count": 77,
     "forks_count": 0,
     "archived": false,
     "owner": {
@@ -37,6 +37,32 @@
       "avatar_Github": "https://avatars.githubusercontent.com/u/0000000?v=4"
     },
     "image": "/images/image3.png"
+  },
+  {
+    "name": "Pedjuang ilmu",
+    "description": "Merupakan website yang bergerak di bidang pendidikan. Website ini menyediakan banyak course mulai dari course untuk pemula hingga expert.",
+    "html_url": "https://github.com/GunturWS/FdF",
+    "stargazers_count": 3,
+    "forks_count": 0,
+    "archived": false,
+    "owner": {
+      "login": "GunturWS",
+      "avatar_Github": "https://avatars.githubusercontent.com/u/0000000?v=4"
+    },
+    "image": "/images/porto.jpg"
+  },
+  {
+    "name": "Ekonomi Kreatif Bontang",
+    "description": "Ekraf Bontang Merupakan website yang berisi tentang informasi mengenai ekonomi kreatif yang ada di kota bontang. Website ini dibuat untuk membantu UMKM yang ada di kota bontang agar lebih dikenal oleh masyarakat luas dan website ini berisi berbagai informasi mengenai kegiatan ekonomi kreatif yang ada di kota bontang.",
+    "html_url": "https://github.com/GunturWS/Ekraf-Frontend",
+    "stargazers_count": 4,
+    "forks_count": 0,
+    "archived": false,
+    "owner": {
+      "login": "GunturWS",
+      "avatar_Github": "https://avatars.githubusercontent.com/u/0000000?v=4"
+    },
+    "image": "/images/image5.png"
   },
   {
     "name": "coming soon",
